Add documentation for create user api and refactor response for list create user api
