# app/handlers/userHandler.go
@@ -4,6 +4,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/gin-gonic/gin/binding"
 	"github.com/sourava/tiger/business/user/request"
+	_ "github.com/sourava/tiger/business/user/response"
 	"github.com/sourava/tiger/external/customErrors"
 	"github.com/sourava/tiger/external/utils"
 
@@ -21,6 +22,17 @@ func NewUserHandler(userService *service.UserService) *UserHandler {
 	}
 }
 
+// CreateUser godoc
+// @Summary      create user api
+// @Description  creates a user.
+// @Accept       json
+// @Produce      json
+// @Param      	 Authorization  header string					 true "token received in login api response"
+// @Param      	 request 		body   request.CreateUserRequest true "create user request body params"
+// @Success      200  {object}  response.CreateUserHandlerResponse
+// @Failure      400  {object} 	utils.HandlerErrorResponse
+// @Failure      500  {object}  utils.HandlerErrorResponse
+// @Router       /users [post]
 func (h *UserHandler) CreateUser(context *gin.Context) {
 	var createUserRequest *request.CreateUserRequest
 	err := context.ShouldBindBodyWith(&createUserRequest, binding.JSON)
@@ -29,12 +41,12 @@ func (h *UserHandler) CreateUser(context *gin.Context) {
 		return
 	}
 
-	createUserErr := h.userService.CreateUser(createUserRequest)
+	createUserResponse, createUserErr := h.userService.CreateUser(createUserRequest)
 	if createUserErr != nil {
 		utils.ReturnError(context, createUserErr)
 		return
 	}
 
-	utils.ReturnSuccessResponse(context, nil)
+	utils.ReturnSuccessResponse(context, createUserResponse)
 	return
 }
