# business/user/request/request.go
@@ -1,7 +1,7 @@
 package request
 
 type CreateUserRequest struct {
-	Username string `json:"username"`
-	Email    string `json:"email"`
-	Password string `json:"password"`
+	Username string `json:"username" example:"username"`
+	Email    string `json:"email" example:"user@gmail.com"`
+	Password string `json:"password" example:"password"`
 }
